Updated to Jackson 3 and Junit 6
- Updated logback-core to fix OWASP error.